yeah modification of transformation works for all geometric transformations!! new TransformationGraph class and updated BigBangModel/ScoreManager. A lot to refactor still...