@@ -1,6 +1,5 @@
 package org.rubato.rubettes.bigbang.model;
 
-import java.util.ArrayList;
 import java.util.List;
 
 import javax.swing.undo.AbstractUndoableEdit;
@@ -15,7 +14,8 @@ public class UndoRedoModel extends Model {
 	
 	private UndoManager undoManager;
 	private UndoableEditSupport undoSupport;
-	private List<AbstractTransformationEdit> transformations;
+	private BigBangTransformationGraph transformations;
+	private List<AbstractTransformationEdit> undoneTransformations;
 	private int selectedTransformationIndex;
 	
 	public UndoRedoModel(Controller controller) {
@@ -29,23 +29,29 @@ public class UndoRedoModel extends Model {
 	}
 	
 	public void undo() {
-		try {
-			this.undoManager.undo();
-			this.transformations.remove(this.transformations.size()-1);
-		} catch (Exception e) { e.printStackTrace(); }
+		//try {
+		//this.undoManager.undo();
+		this.undoneTransformations.add(this.transformations.removeLast());
+		//} catch (Exception e) { e.printStackTrace(); }
 		this.firePropertyChange(BigBangController.UNDO, null, this.undoManager);
 		this.firePropertyChange(BigBangController.GRAPH, null, this.transformations);
 	}
 	
 	public void redo() {
-		this.undoManager.redo();
-		//TODO: add to transformations if transformation!!!!
+		//this.undoManager.redo();
+		this.transformations.add(this.undoneTransformations.remove(this.undoneTransformations.size()-1));
 		this.firePropertyChange(BigBangController.REDO, null, this.undoManager);
 		this.firePropertyChange(BigBangController.GRAPH, null, this.transformations);
 	}
 	
+	public void previewTransformationAtEnd(AbstractUndoableEdit edit) {
+		if (edit instanceof AbstractTransformationEdit) {
+			this.transformations.previewTransformationAtEnd((AbstractTransformationEdit)edit);
+		}
+	}
+	
 	public void postEdit(AbstractUndoableEdit edit) {
-		this.undoSupport.postEdit(edit);
+		//this.undoSupport.postEdit(edit);
 		if (edit instanceof AbstractTransformationEdit) {
 			this.transformations.add((AbstractTransformationEdit)edit);
 		}
@@ -63,9 +69,13 @@ public class UndoRedoModel extends Model {
 		this.firePropertyChange(BigBangController.SELECT_TRANSFORMATION, null, null);
 	}
 	
+	public void modifiedSelectedTransformation() {
+		this.transformations.updateScore();
+	}
+	
 	public void reset() {
 		this.undoManager.discardAllEdits();
-		this.transformations = new ArrayList<AbstractTransformationEdit>();
+		this.transformations = new BigBangTransformationGraph();
 		this.deselectTransformations();
 	}
 
